--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 @import "reset.css";
 @import "variables.css";
+@import "components/status-bar.css";
 @import "views/login.css";
+@import "views/friends.css";
 
 body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
