--- a/css/views/components/status-bar.css
+++ b/css/views/components/status-bar.css
@@ -1,7 +1,11 @@
 .status-bar {
+	position: fixed;
+	top: 0;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	padding: 5px 3px;
+
 }
 
 .status-bar__column {
@@ -10,6 +14,7 @@
 }
 
 .status-bar__column:first-child {
+	margin-left: 3px;
 	margin-right: 5px;
 
 }
@@ -23,6 +28,7 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+	margin-right: 10px;
 }
 
 .status-bar .fa-battery-full {
