Added friends, find, more, settings pages
Settings Page hasn't been worked on yet.

--- a/css/variables.css
+++ b/css/variables.css
@@ -2,4 +2,7 @@
 	--yellow: #FAE100;
 	--nav-btn: #2F363E;
 	--nav-notification: #ff6229;
+	--horizontal-space: 50px;
+	--main-border: 1px solid rgba(0, 0, 0, 0.2);
+	--gray: rgba(0, 0, 0, 0.4);
 }
