--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
 @import "variables.css";
 @import "views/login.css";
 @import "views/friends.css";
+@import "views/chats.css";
+@import "views/find.css";
+@import "views/more.css";
+
 
 body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -9,4 +13,16 @@ body {
 
 input:focus {
 	outline: none;
+}
+
+.main-screen {
+	margin-left: -20px;
+}
+
+.screen {
+	margin: 0px 20px;
+}
+
+.sub-screen {
+	margin: 0px 50px;
 }
