--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
 @import "views/chats.css";
 @import "views/find.css";
 @import "views/more.css";
+@import "views/settings.css";
+@import "views/chat.css";
 
 
 body {
