--- a/css/views/components/nav-bar.css
+++ b/css/views/components/nav-bar.css
@@ -23,6 +23,21 @@
 	position: absolute;
 	left: 10px;
 	bottom: 10px;
+	animation: notificationAnimation 2s ease-in-out infinite;
+}
+
+@keyframes notificationAnimation {
+	0% {
+		transform: none;
+	}
+
+	50% {
+		transform: translateY(-5px);
+	}
+
+	100% {
+		transform: none;
+	}
 }
 
 .nav-bar__notification_empty {
@@ -39,4 +54,34 @@
 	position: absolute;
 	left: 20px;
 	bottom: 20px;
+}
+
+@keyframes appearBtnAnimation {
+	from {
+
+		opacity: 0;
+	}
+
+	to {
+		transform: none;
+		opacity: 1;
+	}
+}
+
+.nav-bar__btn {
+	transform: translateY(50px);
+	opacity: 0;
+	animation: appearBtnAnimation 1s ease-in-out forwards;
+}
+
+.nav-bar__btn:nth-child(2) {
+	animation-delay: 0.2s;
+}
+
+.nav-bar__btn:nth-child(3) {
+	animation-delay: 0.25s;
+}
+
+.nav-bar__btn:last-child {
+	animation-delay: 0.3s;
 }
