--- a/css/views/components/screen-header.css
+++ b/css/views/components/screen-header.css
@@ -15,3 +15,17 @@
 .screen-header__icons span {
 	margin-left: 18px;
 }
+
+@keyframes rotateCog {
+	from {
+		transform: none;
+	}
+
+	to {
+		transform: rotateZ(360deg);
+	}
+}
+
+.screen-header .fa-cog:hover {
+	animation: rotateCog 3s linear infinite;
+}
