--- a/css/views/friends.css
+++ b/css/views/friends.css
@@ -41,3 +41,29 @@
 .friends-screen__channel-icon {
 	color: rgba(0, 0, 0, 0.6);
 }
+
+@keyframes hideSplashScreen {
+	from {
+		opacity: 1;
+	}
+
+	to {
+		opacity: 0;
+		visibility: hidden;
+	}
+}
+
+#splash-screen {
+	background-color: var(--yellow);
+	position: absolute;
+
+	height: 100vh;
+	width: 100vw;
+	top: 0px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 120px;
+	animation: hideSplashScreen 0.3s ease-in-out forwards;
+	animation-delay: 2s;
+}
